feat: Add local setup script and update README for easy portability

--- a/backend-functions/.env
+++ b/backend-functions/.env
@@ -9,4 +9,4 @@ GEMINI_API_KEY=AIzaSyCMbDpybbi30oHf1sLHGD0dO2DIt0fagrI
 GCS_BUCKET_NAME=scholar-ai-storage
 
 # Database Directory (local development)
-DATABASE_DIR=/tmp/scholar_ai_db
+DATABASE_DIR=database
